src/objects/Agent__c.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dose_Unit__c</fullName>
        <label>Dose Unit</label>
        <picklist>
            <picklistValues>
                <fullName>mg/m2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mg/kg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Dose_Unit__c</fullName>
        <label>Total Dose Unit</label>
        <picklist>
            <picklistValues>
                <fullName>mg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>